force-app/main/default/objects/Affiliate_Value__c/Affiliate_Value__c.object-meta.xml
<CustomObject>
    <label>Affiliate Value</label>
    <nameField>
        <label>Affiliate Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliate Values</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>