force-app/main/default/objects/Affiliate_Value__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drug Store Outlet</fullName>
            </value>
            <value>
                <fullName>PXmart Outlet</fullName>
            </value>
            <value>
                <fullName>Trade Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>