force-app/main/default/objects/Affiliate_Value__c/fields/AdditionalEscalationPointEmail1__c.field-meta.xml
<CustomField>
    <fullName>AdditionalEscalationPointEmail1__c</fullName>
    <label>Additional Escalation Point Email 1</label>
    <type>Email</type>
</CustomField>