force-app/main/default/objects/Affiliate_Value__c/fields/AffiliateValue__c.field-meta.xml
<CustomField>
    <fullName>AffiliateValue__c</fullName>
    <externalId>true</externalId>
    <label>Affiliate Value Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>