force-app/main/default/objects/Affiliate_Value__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>