force-app/main/default/objects/Affiliate_Value__c/fields/Auto_Upload_Reference__c.field-meta.xml
<CustomField>
    <fullName>Auto_Upload_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Auto Upload Reference</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>