force-app/main/default/objects/Affiliate_Value__c/fields/ChannelType__c.field-meta.xml
<CustomField>
    <fullName>ChannelType__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Type</valueSetName>
    </valueSet>
</CustomField>