force-app/main/default/objects/Affiliate_Value__c/fields/Created_from_Auto_Upload__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Auto_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Auto Upload</label>
    <type>Checkbox</type>
</CustomField>