force-app/main/default/objects/Affiliate_Value__c/fields/EscalationLevel__c.field-meta.xml
<CustomField>
    <fullName>EscalationLevel__c</fullName>
    <label>Escalation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>