force-app/main/default/objects/Affiliate_Value__c/fields/MainEscalationPointEmail2__c.field-meta.xml
<CustomField>
    <fullName>MainEscalationPointEmail2__c</fullName>
    <label>Main Escalation Point Email 2</label>
    <type>Email</type>
</CustomField>