force-app/main/default/objects/Affiliate_Value__c/fields/MainEscalationPointEmail__c.field-meta.xml
<CustomField>
    <fullName>MainEscalationPointEmail__c</fullName>
    <label>Main Escalation Point Email 1</label>
    <type>Email</type>
</CustomField>