force-app/main/default/objects/Affiliate_Value__c/fields/MC_ANZ_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_ANZ_Sync_Eligibility__c</fullName>
    <formula>ISPICKVAL(Market__c, &apos;ANZ&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC ANZ Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>