force-app/main/default/objects/Affiliate_Value__c/fields/ParentAffiliateValue__c.field-meta.xml
<CustomField>
    <fullName>ParentAffiliateValue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Affiliate Value</label>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipLabel>Affiliate Values</relationshipLabel>
    <relationshipName>Affiliate_Values</relationshipName>
    <type>Lookup</type>
</CustomField>