force-app/main/default/objects/Affiliate_Value__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Affiliate Values (Product)</relationshipLabel>
    <relationshipName>Affiliate_Values</relationshipName>
    <type>Lookup</type>
</CustomField>