force-app/main/default/objects/Affiliate_Value__c/fields/StateCode__c.field-meta.xml
<CustomField>
    <fullName>StateCode__c</fullName>
    <externalId>true</externalId>
    <label>State Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>