force-app/main/default/objects/Affiliate_Value__c/fields/TW_Order_Manual_ID__c.field-meta.xml
<CustomField>
    <fullName>TW_Order_Manual_ID__c</fullName>
    <label>TW Order Manual ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>