force-app/main/default/objects/Affiliate_Value__c/recordTypes/After_Birth_Care_Center.recordType-meta.xml
<RecordType>
    <fullName>After_Birth_Care_Center</fullName>
    <active>true</active>
    <label>After Birth Care Center</label>
</RecordType>