force-app/main/default/objects/Affiliate_Value__c/recordTypes/BrandSwitchReason.recordType-meta.xml
<RecordType>
    <fullName>BrandSwitchReason</fullName>
    <active>true</active>
    <description>Defines a contact’s reason for switching from one brand to another (e.g. from competitor to Abbott, or vice-versa, or from non-milk formula alternatives to Abbott brands)</description>
    <label>Brand Switch Reason</label>
</RecordType>