force-app/main/default/objects/Affiliate_Value__c/recordTypes/Call_Category.recordType-meta.xml
<RecordType>
    <fullName>Call_Category</fullName>
    <active>true</active>
    <label>Call Category</label>
</RecordType>