force-app/main/default/objects/Affiliate_Value__c/recordTypes/Call_Sub_Category.recordType-meta.xml
<RecordType>
    <fullName>Call_Sub_Category</fullName>
    <active>true</active>
    <label>Call Sub-Category</label>
</RecordType>