force-app/main/default/objects/Affiliate_Value__c/recordTypes/Call_Transfer_Reason.recordType-meta.xml
<RecordType>
    <fullName>Call_Transfer_Reason</fullName>
    <active>true</active>
    <description>Defines the reasons why an agent transfer the call to another agent.</description>
    <label>Call Transfer Reason</label>
</RecordType>