force-app/main/default/objects/Affiliate_Value__c/recordTypes/CallBackRequestReason.recordType-meta.xml
<RecordType>
    <fullName>CallBackRequestReason</fullName>
    <active>true</active>
    <description>Defines the reasons why a customer has asked to be called back during an outbound or inbound call.</description>
    <label>Call Back Request Reason</label>
</RecordType>