force-app/main/default/objects/Affiliate_Value__c/recordTypes/Case_Escalation_Point.recordType-meta.xml
<RecordType>
    <fullName>Case_Escalation_Point</fullName>
    <active>true</active>
    <description>Defines the relevant team and email addresses to which escalated cases will be sent for follow-up</description>
    <label>Case Escalation Point</label>
</RecordType>