force-app/main/default/objects/Affiliate_Value__c/recordTypes/CaseSubClassification.recordType-meta.xml
<RecordType>
    <fullName>CaseSubClassification</fullName>
    <active>true</active>
    <description>Defines detailed classifications for inquiry and feedback cases (e.g. black particle found in can)</description>
    <label>Case Sub-Classification</label>
</RecordType>