force-app/main/default/objects/Affiliate_Value__c/recordTypes/City.recordType-meta.xml
<RecordType>
    <fullName>City</fullName>
    <active>true</active>
    <description>Defines cities within a given market, to be selected during address creation and updates for a contact</description>
    <label>City</label>
</RecordType>