force-app/main/default/objects/Affiliate_Value__c/recordTypes/Data_Source.recordType-meta.xml
<RecordType>
    <fullName>Data_Source</fullName>
    <active>true</active>
    <label>Data Source</label>
</RecordType>