force-app/main/default/objects/Affiliate_Value__c/recordTypes/Dietary_Considerations.recordType-meta.xml
<RecordType>
    <fullName>Dietary_Considerations</fullName>
    <active>true</active>
    <description>Defines special dietary needs related to the contact (e.g. picky eater, lactose intolerant), captured under the Medical Diagnosis record related to the contact</description>
    <label>Dietary Considerations</label>
</RecordType>