force-app/main/default/objects/Affiliate_Value__c/recordTypes/District.recordType-meta.xml
<RecordType>
    <fullName>District</fullName>
    <active>true</active>
    <description>Defines the districts within a given market (usually defined by city), used during address creation and updates for a contact</description>
    <label>District</label>
</RecordType>