force-app/main/default/objects/Affiliate_Value__c/recordTypes/Drug_Store.recordType-meta.xml
<RecordType>
    <fullName>Drug_Store</fullName>
    <active>true</active>
    <label>Drug Store</label>
</RecordType>