force-app/main/default/objects/Affiliate_Value__c/recordTypes/Ethnicity.recordType-meta.xml
<RecordType>
    <fullName>Ethnicity</fullName>
    <active>true</active>
    <description>Defines the ethnicities available for selection while creating and updating contact (optional field)</description>
    <label>Ethnicity</label>
</RecordType>