force-app/main/default/objects/Affiliate_Value__c/recordTypes/InvalidReason.recordType-meta.xml
<RecordType>
    <fullName>InvalidReason</fullName>
    <active>true</active>
    <description>Defines the reason a call is considered invalid following attempted outbound calls (e.g. invalid phone number)</description>
    <label>Invalid Reason</label>
</RecordType>