force-app/main/default/objects/Affiliate_Value__c/recordTypes/OrderCancellationReason.recordType-meta.xml
<RecordType>
    <fullName>OrderCancellationReason</fullName>
    <active>true</active>
    <description>Defines the reason an order was cancelled (e.g. failed delivery, no longer required), mapped to the cancellation reasons used by fulfilment/delivery partners</description>
    <label>Order Cancellation Reason</label>
</RecordType>