force-app/main/default/objects/Affiliate_Value__c/recordTypes/PreferredLanguage.recordType-meta.xml
<RecordType>
    <fullName>PreferredLanguage</fullName>
    <active>true</active>
    <description>Defines the preferred language of a contact (used to assign outbound calls to Call Centre Agents with the right language skills)</description>
    <label>Preferred Language</label>
</RecordType>