force-app/main/default/objects/Affiliate_Value__c/recordTypes/ProductManufacturer.recordType-meta.xml
<RecordType>
    <fullName>ProductManufacturer</fullName>
    <active>true</active>
    <description>Defines manufacturer of a product within the master product list (i.e. Abbott or competitors)</description>
    <label>Product Manufacturer</label>
</RecordType>