force-app/main/default/objects/Affiliate_Value__c/recordTypes/Region.recordType-meta.xml
<RecordType>
    <fullName>Region</fullName>
    <active>true</active>
    <description>Defines the geographical regions within a given market used during address creation and updates for a contact</description>
    <label>Region</label>
</RecordType>