force-app/main/default/objects/Affiliate_Value__c/recordTypes/State.recordType-meta.xml
<RecordType>
    <fullName>State</fullName>
    <active>true</active>
    <description>Defines the state available for selection while creating and updating addresses.</description>
    <label>State</label>
</RecordType>