force-app/main/default/objects/Affiliate_Value__c/recordTypes/SubDistrict.recordType-meta.xml
<RecordType>
    <fullName>SubDistrict</fullName>
    <active>true</active>
    <label>Sub-District</label>
</RecordType>