force-app/main/default/objects/Affiliate_Value__c/recordTypes/Suburb_Town.recordType-meta.xml
<RecordType>
    <fullName>Suburb_Town</fullName>
    <active>true</active>
    <description>Defines the suburb/town available for selection while creating and updating addresses.</description>
    <label>Suburb/Town</label>
</RecordType>