force-app/main/default/objects/Affiliate_Value__c/recordTypes/Successful_Reason.recordType-meta.xml
<RecordType>
    <fullName>Successful_Reason</fullName>
    <active>true</active>
    <description>Defines the reason a call outcome was successful (e.g. converted sale)</description>
    <label>Successful Reason</label>
</RecordType>