force-app/main/default/objects/Affiliate_Value__c/recordTypes/Trade.recordType-meta.xml
<RecordType>
    <fullName>Trade</fullName>
    <active>true</active>
    <label>Trade</label>
</RecordType>