force-app/main/default/objects/Affiliate_Value__c/recordTypes/UncontactableReason.recordType-meta.xml
<RecordType>
    <fullName>UncontactableReason</fullName>
    <active>true</active>
    <description>Defines the reason a contact was uncontactable for an outbound call (e.g. no answer)</description>
    <label>Uncontactable Reason</label>
</RecordType>