force-app/main/default/objects/Affiliate_Value__c/recordTypes/UnsuccessfulReason.recordType-meta.xml
<RecordType>
    <fullName>UnsuccessfulReason</fullName>
    <active>true</active>
    <description>Defines the reason a call outcome was unsuccessful (e.g. declined to purchase, hung up the phone)</description>
    <label>Unsuccessful Reason</label>
</RecordType>