force-app/main/default/objects/Affiliate_Value__c/recordTypes/Ward.recordType-meta.xml
<RecordType>
    <fullName>Ward</fullName>
    <active>true</active>
    <description>Defines the wards within a city within a given market (only used in Vietnam), used during address creation and updates for a contact</description>
    <label>Ward</label>
</RecordType>